--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                           <a href="#services" class="dropdown__link">Professional Services</a>
                         </li>
                         <li>
-                          <a href="#finance" class="dropdown__link">Financial Advisory Services</a>
+                          <a href="#finance" class="dropdown__link">Building Online Stores</a>
                         </li>
                       </ul>
                     </div>
@@ -546,7 +546,7 @@
             </div>
             <div class="xl:col-span-3">
               <p class="text-white text-xl">
-                We bring your ideas alive and create brands specifically
+                Bringing your project and business ideas to life. Create brands specifically
                 tailored to suit your business needs with our wealth of experience
                 and expertise in various fields.
               </p>
